Trabajando iconos nosotros

--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Titulo Página</h1>
+        <h1>Más sobre nosotros</h1>
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="build/img/icono1.svg" alt="Icono seguridad" loading="lazy">
+                <h3>Seguridad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/icono2.svg" alt="Icono precio" loading="lazy">
+                <h3>Precio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/icono3.svg" alt="Icono tiempo" loading="lazy">
+                <h3>Tiempo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+            </div>
+
+            
+        </div>
     </main>
 
     <footer class="footer seccion">
