--- a/index.html
+++ b/index.html
@@ -48,9 +48,175 @@
         </div>
     </main>
 
+    <section class="seccion contenedor">
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncios.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div>  <!-- anuncio -->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio2.webp" type="image/webp">
+                    <source srcset="build/img/anuncio2.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio2.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa Terminados de Lujo</h3>
+                    <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                    <p class="precio">$2,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncios.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio3.webp" type="image/webp">
+                    <source srcset="build/img/anuncio3.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio3.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca </h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncios.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+        </div> <!--.contenedor-anuncios-->
+        <div class="alinear-derecha">
+            <a href="anuncios.html" class="boton boton-verde">Ver todas</a>
+        </div>
+
+    </section>
+
+    <section class="imagen-contacto">
+        <h2>Encuentra la casa de tus sueños</h2>
+        <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
+        <a href="contacto.html" class="boton boton-amarillo">Contáctanos</a>
+    </section>
+
+    <div class="contenedor seccion seccion-inferior">
+        <section class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada-blog">
+                <div class="image">
+                    <picture>
+                        <source srcset="build/img/blog1.webp" type="image/webp">
+                        <source srcset="build/img/blog1.jpg" type="image/jpeg">
+                        <img loading="lazy" src="build/img/blog1.jpg" alt="Texto entrada blog">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Terraza en el techo de tu casa</h4>
+                        <p>Escrito el: <span>20/02/2026</span> por: <span>Admin</span></p>
+                        <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero</p>
+                    </a>
+                </div>
+
+            </article>
+
+            <article class="entrada-blog">
+                <div class="image">
+                    <picture>
+                        <source srcset="build/img/blog2.webp" type="image/webp">
+                        <source srcset="build/img/blog2.jpg" type="image/jpeg">
+                        <img loading="lazy" src="build/img/blog2.jpg" alt="Texto entrada blog">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Guía para la decoración de tu hogar</h4>
+                        <p>Escrito el: <span>20/02/2026</span> por: <span>Admin</span></p>
+                        <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+                    </a>
+                </div>
+
+            </article>
+        </section>
+
+        <section class="testimoniales">
+            <h3>Testimoniales</h3>
+
+            <div class="testimonial">
+                <blockquote>
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
+                </blockquote>
+                <p>- Orlando Flores</p>
+            </div>
+        </section>
+    </div>
+
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
-             <nav class="navegacion">
+            <nav class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
