--- a/anuncios.html
+++ b/anuncios.html
@@ -25,7 +25,202 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Anuncios</h1>
+        <h1>Casas y Departamentos en Venta</h1>
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div>  <!-- anuncio -->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio2.webp" type="image/webp">
+                    <source srcset="build/img/anuncio2.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio2.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa Terminados de Lujo</h3>
+                    <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                    <p class="precio">$2,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio3.webp" type="image/webp">
+                    <source srcset="build/img/anuncio3.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio3.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca </h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio4.webp" type="image/webp">
+                    <source srcset="build/img/anuncio4.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio34.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca </h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio5.webp" type="image/webp">
+                    <source srcset="build/img/anuncio5.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio5.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca </h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio6.webp" type="image/webp">
+                    <source srcset="build/img/anuncio6.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio6.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca </h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo-block">
+                        Ver propiedad
+                    </a> 
+                </div>  <!-- contenido-anuncio -->
+            </div> <!--anuncio-->
+
+
+        </div> <!--.contenedor-anuncios-->
     </main>
 
     <footer class="footer seccion">
