--- a/contacto.html
+++ b/contacto.html
@@ -26,6 +26,69 @@
 
     <main class="contenedor seccion">
         <h1>Contacto</h1>
+            
+        <picture>
+            <source srcset="build/img/destacada3.webp" type="image/webp">
+            <source srcset="build/img/destacada3.jpg" type="image/jpeg">
+            <img loading="lazy" src="build/img/destacada3.jpg" alt="Imagen formulario contacto">
+        </picture>
+
+        <h2>Llene el formulario de Contacto</h2>
+
+        <form action="" class="formulario">
+            <fieldset>
+                <legend>Información Personal</legend>
+
+                <label for="nombre">Nombre</label>
+                <input type="text" placeholder="Tu Nombre" id="nombre">
+
+                <label for="email">E-mail</label>
+                <input type="email" placeholder="Tu E-mail" id="email">
+
+                <label for="telefono">Teléfono</label>
+                <input type="tell" placeholder="Tu Teléfono" id="telefono">
+
+                <label for="mensaje">Mensaje</label>
+                <textarea name="mensaje" id="mensaje"></textarea>
+            </fieldset>
+
+            <fieldset>
+                <legend>Información de la propiedad</legend>
+
+                <label for="opciones">Vende o Compra</label>
+                <select name="opciones" id="opciones">
+                    <option value="" disabled selected>-- Seleccione --</option>
+                    <option value="Compra">Compra</option>
+                    <option value="Venta">Venta</option>
+                </select>
+
+                <label for="presupuesto">Presupuesto o Precio</label>
+                <input type="number" placeholder="Tu Presupuesto o Precio" id="presupuesto">
+            </fieldset>
+
+            <fieldset>
+                <legend>Contacto</legend>
+
+                <p>Como desea ser contactado</p>
+
+                <div class="forma-contacto">
+                    <label for="contactar-telefono">Teléfono</label>
+                    <input type="radio" name="contacto" value="telefono" id="contactar-telefono">
+
+                    <label for="contactar-email">E-mail</label>
+                    <input type="radio" name="contacto" value="email" id="contactar-email">
+                </div>
+
+                <p>Si eligió teléfono, elija la fecha y la hora</p>
+                <label for="fecha">Fecha</label>
+                <input type="date" id="fecha">
+                <label for="hora">Hora</label>
+                <input type="time" id="hora" min="09:00" max="18:00">
+            </fieldset>
+
+            <input type="submit" value="Enviar" class="boton-verde">
+        </form>
+
     </main>
 
     <footer class="footer seccion">
