--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
-                        <p>Escrito el: <span>20/02/2026</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/02/2026</span> por: <span>Admin</span></p>
                         <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero</p>
                     </a>
                 </div>
@@ -193,7 +193,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Guía para la decoración de tu hogar</h4>
-                        <p>Escrito el: <span>20/02/2026</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/02/2026</span> por: <span>Admin</span></p>
                         <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
                     </a>
                 </div>
