--- a/anuncio.html
+++ b/anuncio.html
@@ -14,12 +14,19 @@
                     <img src="build/img/logo.svg" alt="logotipo de Bienes Raices">
                 </a>
                 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu responsive">
+                </div>
+
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="icono darkmode">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
             </div><!-- .barra -->
         </div>
     </header>
@@ -35,18 +42,17 @@
 
         <div class="resumen-propiedad">
             <p class="precio">$3,000,000</p>
-
             <ul class="iconos-caracteristicas">
                 <li>
-                    <img loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
+                    <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="Icono wc">
                     <p>3</p>
                 </li>
                 <li>
-                    <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+                    <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
                     <p>3</p>
                 </li>
                 <li>
-                    <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
+                    <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="Icono dormitorio">
                     <p>4</p>
                 </li>
             </ul>
